--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,18 @@ android {
         enabled = true
     }
 
+    /*
+    to solve:
+    Static interface methods are only supported starting with Android N (--min-api 24): okhttp3.Request okhttp3.Authenticator.l
+    */
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
+
 }
 
 dependencies {
