--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,7 @@ dependencies {
     implementation 'com.squareup.moshi:moshi-kotlin:1.9.2'
     implementation 'com.squareup.retrofit2:converter-moshi:2.8.1'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+    kapt "android.arch.persistence.room:compiler:1.1.1"
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+//    kapt 'androidx.room:room-compiler:2.2.5'
 }
