--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,9 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+//        Cannot fit requested classes in a single dex file (# methods: 66633 > 65536)
+        multiDexEnabled true
     }
     android.defaultConfig.vectorDrawables.useSupportLibrary = true
 
@@ -69,4 +72,10 @@ dependencies {
     kapt "android.arch.persistence.room:compiler:1.1.1"
     implementation 'com.jakewharton.timber:timber:4.7.1'
 //    kapt 'androidx.room:room-compiler:2.2.5'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+/*
+solve
+Cannot fit requested classes in a single dex file (# methods: 66633 > 65536)*/
+    implementation 'com.android.support:multidex:1.0.3'
 }
