--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-//        Cannot fit requested classes in a single dex file (# methods: 66633 > 65536)
+        // Fix build error: Cannot fit requested classes in a single dex file (# methods: 66633 > 65536)
         multiDexEnabled true
     }
     android.defaultConfig.vectorDrawables.useSupportLibrary = true
@@ -33,7 +33,7 @@ android {
     }
 
     /*
-    to solve:
+    Fix compile ERROR:
     Static interface methods are only supported starting with Android N (--min-api 24): okhttp3.Request okhttp3.Authenticator.l
     */
     compileOptions {
@@ -42,6 +42,12 @@ android {
     }
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
+
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
     }
 
 }
@@ -63,7 +69,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.0-alpha05'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.room:room-runtime:2.2.5'
-    annotationProcessor 'androidx.room:room-compiler:2.2.5'
+    kapt 'androidx.room:room-compiler:2.2.5'
     implementation 'com.squareup.retrofit2:retrofit:2.8.1'
     implementation 'com.squareup.moshi:moshi:1.9.2'
     implementation 'com.squareup.moshi:moshi-kotlin:1.9.2'
@@ -71,12 +77,10 @@ dependencies {
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
     kapt "android.arch.persistence.room:compiler:1.1.1"
     implementation 'com.jakewharton.timber:timber:4.7.1'
-//    kapt 'androidx.room:room-compiler:2.2.5'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-/*
-solve
-Cannot fit requested classes in a single dex file (# methods: 66633 > 65536)*/
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+
+    // solve Cannot fit requested classes in a single dex file (# methods: 66633 > 65536)
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'androidx.paging:paging-runtime-ktx:2.1.2'
     implementation 'androidx.work:work-runtime-ktx:2.3.4'
