--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,4 +84,9 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'androidx.paging:paging-runtime-ktx:2.1.2'
     implementation 'androidx.work:work-runtime-ktx:2.3.4'
+    testImplementation 'org.hamcrest:hamcrest-all:1.3'
+    testImplementation 'androidx.test.ext:junit-ktx:1.1.1'
+    testImplementation 'androidx.test:core-ktx:1.2.0'
+    testImplementation 'org.robolectric:robolectric:4.3.1'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
 }
