Updating dependencies to ktx

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,7 @@ dependencies {
     testImplementation 'androidx.test:core-ktx:1.2.0'
     testImplementation 'org.robolectric:robolectric:4.3.1'
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    implementation 'androidx.collection:collection-ktx:1.1.0'
+    implementation 'androidx.fragment:fragment-ktx:1.2.4'
+    implementation 'androidx.room:room-ktx:2.2.5'
 }
