--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,7 +59,6 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
@@ -68,8 +67,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.1'
     implementation 'com.google.android.material:material:1.2.0-alpha05'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.room:room-runtime:2.2.5'
-    kapt 'androidx.room:room-compiler:2.2.5'
+//    implementation 'androidx.room:room-runtime:2.2.5'
+    kapt 'androidx.room:room-ktx:2.2.5'
     implementation 'com.squareup.retrofit2:retrofit:2.8.1'
     implementation 'com.squareup.moshi:moshi:1.9.2'
     implementation 'com.squareup.moshi:moshi-kotlin:1.9.2'
@@ -92,4 +91,5 @@ dependencies {
     implementation 'androidx.collection:collection-ktx:1.1.0'
     implementation 'androidx.fragment:fragment-ktx:1.2.4'
     implementation 'androidx.room:room-ktx:2.2.5'
+    implementation 'androidx.navigation:navigation-runtime-ktx:2.2.1'
 }
