--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,15 +63,13 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.1'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.2.1'
-    implementation 'com.google.android.material:material:1.2.0-alpha05'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
     implementation 'androidx.cardview:cardview:1.0.0'
 //    implementation 'androidx.room:room-runtime:2.2.5'
     kapt 'androidx.room:room-ktx:2.2.5'
     implementation 'com.squareup.retrofit2:retrofit:2.8.1'
     implementation 'com.squareup.moshi:moshi:1.9.2'
-    implementation 'com.squareup.moshi:moshi-kotlin:1.9.2'
     implementation 'com.squareup.retrofit2:converter-moshi:2.8.1'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
     kapt "android.arch.persistence.room:compiler:1.1.1"
@@ -91,5 +89,7 @@ dependencies {
     implementation 'androidx.collection:collection-ktx:1.1.0'
     implementation 'androidx.fragment:fragment-ktx:1.2.4'
     implementation 'androidx.room:room-ktx:2.2.5'
-    implementation 'androidx.navigation:navigation-runtime-ktx:2.2.1'
+    implementation 'androidx.navigation:navigation-runtime-ktx:2.2.2'
+    kapt("com.squareup.moshi:moshi-kotlin-codegen:1.9.2")
+    implementation 'com.google.android.material:material:1.1.0'
 }
