--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,10 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
+    buildFeatures {
+        dataBinding = true
+    }
+
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
 
@@ -28,9 +32,6 @@ android {
         }
     }
 
-    dataBinding {
-        enabled = true
-    }
 
     /*
     Fix compile ERROR:
@@ -60,12 +61,12 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.1'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.2.1'
-    implementation 'com.google.android.material:material:1.2.0-alpha05'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
+    implementation 'com.google.android.material:material:1.2.0-alpha06'
     implementation 'androidx.cardview:cardview:1.0.0'
 //    implementation 'androidx.room:room-runtime:2.2.5'
     kapt 'androidx.room:room-ktx:2.2.5'
@@ -91,5 +92,5 @@ dependencies {
     implementation 'androidx.collection:collection-ktx:1.1.0'
     implementation 'androidx.fragment:fragment-ktx:1.2.4'
     implementation 'androidx.room:room-ktx:2.2.5'
-    implementation 'androidx.navigation:navigation-runtime-ktx:2.2.1'
+    implementation 'androidx.navigation:navigation-runtime-ktx:2.2.2'
 }
