--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,4 +94,5 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.2.4'
     implementation 'androidx.room:room-ktx:2.2.5'
     implementation 'androidx.navigation:navigation-runtime-ktx:2.2.2'
+    testImplementation 'androidx.test.espresso:espresso-contrib:3.1.1'
 }
